# qu-plot

./: .pre-commit-config.yaml  example.ipynb  minimal.cfg  pyproject.toml  requirements.txt  setup.cfg
src/qu-plot/: plot_poldetection.py
src/qu-plot/faraday/: __init__.py  csromer_reconstructor.py  faraday_reconstructor.py  faraday_stuff.py  pol_angle_gradient_reconstructor.py  qufitting_reconstructor.py
src/qu-plot/io/: __init__.py  config_io.py  dataio.py  io.py  los_io.py
src/qu-plot/utils/: __init__.py  utils.py
src/qu_plot/faraday/: csromer_reconstructor.py  faraday_reconstructor.py  pol_angle_gradient_reconstructor.py
src/qu_plot/io/: catalog_io.py  los_io.py
