[build-system]
requires = ["setuptools>=65.5.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyralysis"
authors = [
    {name = "Anna Scaife", email = "anna.scaife@manchester.ac.uk"},
]
maintainers = [
    {name = "Anna Scaife", email = "anna.scaife@manchester.ac.uk"},
]
description = "QU plotting for MIGHTEE-POL"
readme = "README.md"
license = {text = "GNU GPL"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dynamic = ["version", "dependencies"]

[project.urls]
Source = "https://gitlab.com/as595/QUPlot"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["qu-plot*"]
namespaces = false

[tool.setuptools_scm]
write_to = "src/pyralysis/_version.py"
