[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=65.5.0", "setuptools-scm", "wheel"]

[project]
authors = [
  {name = "Anna Scaife", email = "anna.scaife@manchester.ac.uk"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
description = "QU plotting for MIGHTEE-POL"
dynamic = ["version", "dependencies"]
license = {text = "GNU GPL"}
maintainers = [
  {name = "Anna Scaife", email = "anna.scaife@manchester.ac.uk"}
]
name = "qu_plot"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Source = "https://gitlab.com/as595/QUPlot"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["qu_plot*"]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/qu_plot/_version.py"
